src/index.css
/* ... */
/* Base  {{{1 */

html {
  --current-background-color: var(--red-1);
  font-family: var(--font-text);
  font-size: clamp(14px, calc(0.875rem + ((1vi - 3.2px) * 1.0989)), 18px);
  line-height: var(--line-feed);
  background-color: var(--current-background-color);
  background-repeat: repeat;
  color: var(--gray-10);
  touch-action: manipulation;
  scroll-behavior: smooth;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

h1, h2, h3, h4, h5, h6, [role="heading"] {
  --floor: calc((var(--scale, 1.0) - 0.25) / 0.25 - 0.5);
  --line-scale: max(var(--floor) * 0.25, 1.0);
  line-height: calc(var(--line-feed) * var(--line-scale));
  letter-spacing: -0.5px;
  font-family: var(--font-display);
  font-weight: bold;
  font-size: calc(1.0rem * var(--scale, 1.0));
  font-feature-settings: 'palt';
}

h1, h2, h3, h4, h5, h6 {
  margin-block: 0 var(--line-feed);
}

:not(:where(h1, h2, h3, h4, h5, h6)) + :is(h1, h2, h3) {
  margin-block-start: calc(var(--line-feed) * 2);
}

:not(:where(h1, h2, h3, h4, h5, h6)) + :is(h4, h5, h6) {
  margin-block-start: var(--line-feed);
}

h1 {
  --scale: var(--scale-h1);
}

h2 {
  --scale: var(--scale-h2);
}

h3 {
  --scale: var(--scale-h3);
}

h4 {
  --scale: var(--scale-h4);
}

h5 {
  --scale: var(--scale-h5);
}

h6 {
  --scale: var(--scale-h6);
}

iframe {
  border: 0;
}

blockquote, details, dl, figure, ol, p, pre, table, ul {
  margin-block: 0 var(--line-feed);
  margin-inline: 0;
}

hr {
  margin-block: 0 var(--line-feed);
  margin-inline: 0;
  border: 0;
  font-size: var(--line-feed);
  line-height: calc(var(--line-feed) * 2);
  background-image: linear-gradient(to left, currentColor, rgba(255, 255, 255, 0)),
                    linear-gradient(to right, currentColor, rgba(255, 255, 255, 0));
  background-position: left center, right center;
  background-size: calc(50% - 1.5ch) 1px;
  background-repeat: no-repeat;
}

hr::before {
  content: '§';
  display: block;
  text-align: center;
  transform: rotate(20deg);
}

menu {
  list-style: none;
  margin: 0;
  padding: 0;
}

ol, ul {
  padding-inline-start: var(--line-feed);
}

figcaption {
  text-align: center;
  font-family: var(--font-display);
  font-style: italic;
  font-size: var(--text-x-small);
}

table {
  border-collapse: collapse;
  border-spacing: 0;
  font: inherit;
  line-height: inherit;
  white-space: inherit;
}

th {
  text-align: left;
  font-family: var(--font-display);
}

em, strong {
  font-family: var(--font-display);
}

code, kbd, pre, samp {
  font-family: var(--font-code);
  font-size: var(--text-small);
}

code, kbd, samp {
  line-height: 1.0;
}

kbd {
  padding-block: 1px;
  padding-inline: 0.5ch;
  margin-inline: 2px;
  border: 1px solid currentColor;
  border-radius: 4px;
  box-shadow: 0 2px 0 1px currentColor;
  font-size: var(--text-x-small);
}

summary {
  cursor: pointer;
}

a {
  color: var(--red-6);
  text-underline-offset: 2px;
}

a:hover {
  text-decoration: none;
}

/* Layouts  {{{1 */

.l-header {
  --current-background-color: var(--gray-10);
  padding-block: var(--line-feed);
  background-color: var(--current-background-color);
  color: var(--red-1);
}

.l-main {
  padding-block: var(--line-feed);
}

.l-container {
  margin-inline: auto;
  padding-inline: calc(var(--line-feed) / 2);
  max-inline-size: var(--text-columns);
}

.l-footer {
  padding-block: calc(var(--line-feed) - 1px) var(--line-feed);
  border-block-start: 1px dashed currentColor;
}

.l-article-header {
  --current-background-color: var(--red-3);
  padding-block: var(--line-feed);
  background-color: var(--current-background-color);
}

.l-article-main {
  padding-block-start: var(--line-feed);
}

.l-article-footer {
  padding-block: calc(var(--line-feed) - 1px) var(--line-feed);
  border-block-start: 1px dashed currentColor;
  background-color: var(--red-2);
}

.l-page {
  padding-block: var(--line-feed);
}

/* Components  {{{1 */
/* .button  {{{2 */

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 2px solid transparent;
  border-radius: 4px;
  padding-block: calc(var(--line-feed) / 4 - 2px);
  padding-inline: 2ch;
  font-family: var(--font-display);
}

a.button {
  text-decoration: none;
}

.button.is-outlined {
  color: var(--gray-10);
  border-color: var(--gray-10);
  box-shadow: 2px 2px var(--gray-4);
}

.button.is-outlined:hover {
  color: var(--current-background-color);
  background-color: var(--gray-10);
}

.button.is-filled {
  color: var(--current-background-color);
  background-color: var(--gray-10);
}

.button.is-filled:hover {
  background-color: var(--gray-9);
}

/* .circle-button  {{{2 */

.circle-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  block-size: calc(var(--line-feed) * 2 - 1px);
  inline-size: calc(var(--line-feed) * 2 - 1px);
  border: 1px solid currentColor;
  border-radius: 50%;
  background-color: var(--red-1);
  box-shadow: 2px 2px var(--gray-4);
}

a.circle-button {
  color: inherit;
  text-decoration: none;
}

a.circle-button:hover {
  background-color: var(--gray-2);
}

/* .figure  {{{2 */
/* Common  {{{3 */

.figure-caption {
  color: var(--gray-7);
}

.figure:where(.is-table, .is-html) > .figure-body {
  overflow-x: auto;
}

.figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar {
  inline-size: calc(var(--line-feed) / 2);
  block-size: calc(var(--line-feed) / 2);
  background-color: var(--gray-4);
}

.figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar-thumb {
  background-color: currentColor;
}

@media not (min-width: 38rem) {
  :is(.figure.is-blockquote, .figure.is-code, .figure.is-image, .figure.is-table) > .figure-body {
    margin-inline: calc(var(--line-feed) / 2 * -1);
  }

  .figure.is-code[data-language]::before {
    inset-inline-end: 0;
  }
}
/* ... */

